# firmware-open

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  FEATURES.md  Jenkinsfile  LICENSE.md  README.md  README.md.in  firmware.metainfo.xml.in  readme.sh  remotes.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  shell.nix
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
LICENSES/: BSD-2-Clause-Patent.txt  Intel-redist.txt
apps/: README.md
containers/: Makefile
docs/: README.md  SUMMARY.md  adding-a-new-board.md  book.toml  building.md  debugging.md  features.md  flashing.md  index.md  intel-me.md  schematics.md  uefi.md
libs/: README.md
models/: README.md  README.md.sh
scripts/: _ch341a.sh  _spipi.sh  build.sh  ch341a-dump.sh  ch341a-flash.sh  coreboot-gpio.sh  coreboot-hda.sh  coreboot-sdk.sh  deps.sh  devicetree.py  extract.sh  flash.sh  fsp_params.sh  generate.sh  guid.sh  install-deps.sh  install-rust.sh  lvfs.sh  minplatform.sh  models.sh  pxestick.sh  qemu.sh  readmes.sh  realtek-coeffs.sh  reconfig.sh  remotes.sh  smmstore.sh  spipi-dump.sh  spipi-erase.sh  spipi-flash.sh  spipi.sh  udk-debug.gdb  udk-output.sh  udk-server.sh  udk.sh  update.sh  usb-image.sh  usb.sh
tools/: README.md
tools/modeltool/: Cargo.toml  README.md
tools/modeltool/src/: main.rs
usb4/: Cargo.toml  usb4-pd.sh
you-ass-bee-see/: .gitignore  Cargo.toml  eeprom.c  usb4-pd.sh
you-ass-bee-see/eeprog-0.7.6-tear12/: 24cXX.c  24cXX.h  Makefile  README  i2c-dev.h
you-ass-bee-see/src/: main.rs
(+888 files in other folders)
