[package]
name = "you-ass-bee-see"
version = "0.1.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coreboot-collector = { path = "../tools/coreboot-collector" }
i2cdev = "0.4.4"
