# SPDX-License-Identifier: GPL-3.0-only
# SPDX-File-Copyright: 2025 System76, Inc.

[package]
name = "modeltool"
description = "Prints info about blobs in a model directory"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
redox_intelflash.workspace = true
system76_ecflash.workspace = true

[lints]
workspace = true
